# scope-action-cpp

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake-variants.yaml  sonar-project.properties  vcpkg-configuration.json
.github/: renovate.json
.github/actions/install-dependencies/: action.yml
.github/workflows/: apidocs.yml  ci-vcpkg.yml  ci.yml  clang-tidy.yml  codeql.yml  ctest.yml  sonarcloud.yml  update-vcpkg-baseline.yml
cmake/: Doxyfile.in  build_types.cmake  coverage.cmake  delete_gcda_files.cmake  docs.cmake  extra.css  pkg-config.pc.in  tools.cmake  wwa-scope-action-config-version.cmake.in  wwa-scope-action-config.cmake
ctest/: asan.ctest.cmake  coverage.ctest.cmake  lsan.ctest.cmake  ubsan.ctest.cmake  valgrind.ctest.cmake
examples/: .clang-tidy  CMakeLists.txt  scope_action.cpp  unique_resource.cpp
src/: CMakeLists.txt  scope_action.h  unique_resource.h
test/: .clang-tidy  CMakeLists.txt  exit_action.cpp  fail_action.cpp  success_action.cpp  unique_resource.cpp
